Improvements at style.css: layout was not showing correctly at Safari

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -27,7 +27,6 @@
 }
 
 .row {
-    display: flex;
     flex-wrap: wrap;
 }
 
@@ -62,12 +61,6 @@
     text-align: center;
 }
 
-#box {
-    margin-bottom: 140px;
-    background-image: url('../img/home_img.jpg');
-    height: 100vh;
-}
-
 .grade {
     position: absolute;
     top: 0;
@@ -79,36 +72,40 @@
     opacity: 0.8;
 }
 
+#box {
+    margin-bottom: 5%;
+    background-image: url('../img/home_img.jpg');
+    height: 100vh;
+}
+
 #box1 {
-    margin-bottom: 140px;
+    margin-bottom: 5%;
 }
 
 #box2 {
-    margin-bottom: 140px;
+    margin-bottom: 5%;
     background-color: #e5ecef;
 }
 
 #box3 {
-    margin-bottom: 140px;
+    margin-bottom: 5%;
 }
 
 #box4 {
     background-color: #e5ecef;
-    margin-bottom: 140px;
+    margin-bottom: 5%;
 }
 
 .about-content {
     display: inline-block;
     width: 65%;
 }
-
 .about-photo {
     float: left;
     border-radius: 170px;
     width: 20%;
     overflow: hidden;
 }
-
 .about-photo img {
     width: 100%;
     height: auto;
@@ -116,7 +113,6 @@
     vertical-align: middle;
     border-style: none;
 }
-
 .about-text {
     float: right;
     font-size: 20px;
@@ -154,7 +150,6 @@
     padding: 0;
     flex-wrap: wrap;
 }
-
 #box4 ul li {
     width: 25%;
     margin: 0 0 4rem;
@@ -229,7 +224,6 @@
         background: 0 0;
         border: 1px solid transparent;
     }
-
     .home-text {
         width: 90%;
         height: 200px;
@@ -251,22 +245,18 @@
         width: 90%;
         margin: 0 auto;
     }
-    
     .education h3, .jobs h3, .projects h3, .award h3 {
         font-size: 20px;
     }
     .jobs, .award {
         margin-top: 2rem;
     }
-
     .contact-icons li {
         margin: 0 1rem 5rem 1rem;
     }
-
     #pagetop {
         right: 10px;
     }
-
     #box2 ul, #box3 ul {
         width: 90%;
     }
